Create add count view section table in HTML

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
         </div>
     </nav>
 
-    <!-- ACCOUNT VIEW SECTION -->
-    <section class="accountView">
+
+    <section class="container">
+      <!-- ACCOUNT VIEW SECTION -->
+      <div class="accountView">
         <div class="row">
             <div class="col-8 offset-2">
                 <h1 class="text-center py-5">Accounts</h1>
@@ -49,7 +51,17 @@
             </div>
 
         </div>
+      </div>
 
+      <!-- ADD ACCOUNT VIEW SECTION-->
+      <div class="addAccountView">
+
+        <div class="row">
+          <div class="col-8 offset-2">
+            <h1 class="text-center py-5">Add account</h1>
+          </div>
+        </div>
+      </div>
     </section>
     
     <script src="db.js"></script>
