Create input form for add account view section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
         <div class="row">
           <div class="col-8 offset-2">
             <h1 class="text-center py-5">Add account</h1>
+            <input class="form-control mb-3" type="text" placeholder="ID" name="id">
+            <input class="form-control mb-3" type="text" placeholder="Full name" name="fullName">
+            <input class="form-control mb-3" type="text" placeholder="Deposit" name="deposit">
+            <input class="form-control mb-3" type="text" placeholder="Card" name="card">
+            <button class="btn btn-primary form-control">Add account</button>
           </div>
         </div>
       </div>
