--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <button class="btn btn-primary me-2">Accounts</button>
+                <button id="accounts" class="btn btn-primary me-2">Accounts</button>
               </li>
               <li class="nav-item">
-                <button class="btn btn-addAcc me-2">Add Accounts</button>
+                <button id="addAccount" class="btn btn-addAcc me-2">Add Accounts</button>
               </li>
               <li class="nav-item">
-                <button class="btn btn-EditDeleteAcc me-2">Edit/Delete Accounts</button>
+                <button id="editDeleteAccount" class="btn btn-EditDeleteAcc me-2">Edit/Delete Accounts</button>
               </li>
             </ul>
           </div>
