Crate selectors for Account view inputs and save button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <input class="form-control mb-3" type="text" placeholder="Full name" name="fullName">
             <input class="form-control mb-3" type="text" placeholder="Deposit" name="deposit">
             <input class="form-control mb-3" type="text" placeholder="Card" name="card">
-            <button class="btn btn-primary form-control">Add account</button>
+            <button id="saveAccount" class="btn btn-primary form-control">Add account</button>
           </div>
         </div>
       </div>
