Create edit-delete view secion in html

--- a/index.html
+++ b/index.html
@@ -49,13 +49,11 @@
                     </tbody>
                   </table>
             </div>
-
         </div>
       </div>
 
       <!-- ADD ACCOUNT VIEW SECTION-->
       <div class="addAccountView">
-
         <div class="row">
           <div class="col-8 offset-2">
             <h1 class="text-center py-5">Add account</h1>
@@ -67,6 +65,28 @@
           </div>
         </div>
       </div>
+
+      <!-- EDIT-DELETE VIEW SECTION-->
+      <div class="editDeleteView">
+        <div class="row">
+            <div class="col-8 offset-2">
+                <h1 class="text-center py-5">Accounts</h1>
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Full name</th>
+                        <th scope="col">Deposit</th>
+                        <th scope="col">Card</th>
+                        <th scope="col">Actions</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                         
+                    </tbody>
+                  </table>
+            </div>
+        </div>
     </section>
     
     <script src="db.js"></script>
