--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="container">
       <!-- ACCOUNT VIEW SECTION -->
-      <div class="accountView">
+      <div class="accountView view">
         <div class="row">
             <div class="col-8 offset-2">
                 <h1 class="text-center py-5">Accounts</h1>
@@ -53,7 +53,7 @@
       </div>
 
       <!-- ADD ACCOUNT VIEW SECTION-->
-      <div class="addAccountView">
+      <div class="addAccountView view">
         <div class="row">
           <div class="col-8 offset-2">
             <h1 class="text-center py-5">Add account</h1>
@@ -67,7 +67,7 @@
       </div>
 
       <!-- EDIT-DELETE VIEW SECTION-->
-      <div class="editDeleteView">
+      <div class="editDeleteView view">
         <div class="row">
             <div class="col-8 offset-2">
                 <h1 class="text-center py-5">Accounts</h1>
