--- a/index.html
+++ b/index.html
@@ -87,6 +87,21 @@
                   </table>
             </div>
         </div>
+
+        <!-- EDIT ACCOUNT VIEW SECTION -->
+        <div class="EditAccountView view">
+          <div class="row">
+            <div class="col-8 offset-2">
+              <h1 class="text-center py-5">Edit account</h1>
+              <input class="form-control mb-3" type="text" placeholder="ID" name="id">
+              <input class="form-control mb-3" type="text" placeholder="Full name" name="fullName">
+              <input class="form-control mb-3" type="text" placeholder="Deposit" name="deposit">
+              <input class="form-control mb-3" type="text" placeholder="Card" name="card">
+              <button id="updateAccount" class="btn btn-primary form-control">Update account</button>
+            </div>
+          </div>
+        </div>
+  
     </section>
     
     <script src="db.js"></script>
