Show only selected view

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <!-- EDIT ACCOUNT VIEW SECTION -->
-        <div class="EditAccountView view">
+        <div class="editAccountView view">
           <div class="row">
             <div class="col-8 offset-2">
               <h1 class="text-center py-5">Edit account</h1>
