Create edit account view tab

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                   </table>
             </div>
         </div>
+      </div>
 
         <!-- EDIT ACCOUNT VIEW SECTION -->
         <div class="editAccountView view">
